# master_thes_code

./: Cargo.toml  README.md  build.rs
benchmarks/tests/: sgen4-unsat-65-1.cnf
cglucose/: wrapper.cpp  wrapper.h
cglucose/core/: Solver.cc  Solver.h
cglucose/mtl/: Vec.h
cglucose/simp/: SimpSolver.cc  SimpSolver.h  SolverHelper.cc  SolverHelper.h
examples/: parallel_bdd_glucose.rs  parallel_bdd_glucose_ci.rs
src/: approx.rs  bdd.rs  bdd_util.rs  clause_gen.rs  lib.rs
src/expr/: bool_expr.rs
src/parallel/: clause_database.rs
src/parser/: dimacs_grammar.pest  parse.rs
src/sharing/: sharing_manager.rs
src/statistics/: stats.rs
src/variable_ordering/: var_ordering.rs  var_ordering_builder.rs
tests/: lib.rs  test1.cnf  test3.cnf  test4.cnf
