[package]
name = "bdd_sat_solver"
version = "0.1.0"
edition = "2021"

[build-dependencies]
bindgen = "0.60"
cc = { version = "1.0.37", features = ["parallel"] }

[dependencies]
pest = "2.0"
pest_derive = "2.0"
rand = "0.8.5"
rayon = "1.5.3"
bit-set = "0.5.3"
anyhow = "1"
crossbeam-channel = "0.5.6"
cpu-time = "1.0.0"
bloom-filters = "0.1.2"
tokio = { version = "1.24.2", features = ["full"] }
plotlib = "0.5.1"
futures = "*"

[dependencies.async-std]
version = "1.6"
features = ["attributes", "tokio1"]

[features]
default=["generate-bindings"]
generate-bindings = []
